# hpp-manipulation-corba

./: .gitlab-ci.yml  CMakeLists.txt  default.nix  flake.nix  package.xml  pyproject.toml
doc/: main.hh.in
idl/hpp/corbaserver/manipulation/: graph.idl  problem.idl  robot.idl
idl/hpp/manipulation_idl/: _path_planners.idl
src/: CMakeLists.txt  graph.impl.cc  hpp-manipulation-corba.cc  problem.impl.cc  problem.impl.hh  robot.impl.cc  robot.impl.hh  tools.hh
src/hpp/corbaserver/manipulation/: __init__.py  client.py  constraint_graph.py  constraint_graph_factory.py  constraints.py  possible_grasps.py  problem_solver.py  robot.py  security_margins.py
src/hpp/manipulation/: constraint_graph.py  constraints.py  problem_solver.py  robot.py  security_margins.py
src/hpp_manipulation/: __init__.py  client.py  constraint_graph.py  constraints.py  problem_solver.py  robot.py
tests/: check_core_idl.py  robot.py
